<resources>
    <string name="app_name">Check Apartment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">INGRESAR</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Ingrese mail</string>
    <string name="TextView">Ingrese contraseña</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextView1">¿Luces del apartamento están OK?</string>
    <string name="TextView2">¿Elementos del baño están OK?</string>
    <string name="TextView3">¿Elementos de la cocina están OK?</string>
    <string name="TextView4">¿Elementos del dormitorio están OK?</string>
    <string name="TextView5">¿Estado general de las terminaciones?</string>
    <string name="TextView6">Condominio</string>
    <string name="TextView7">Departamento</string>
    <string name="TextView9">PUNTUACIÓN OBTENIDA:    </string>
    <string name="TextView10">.........</string>
    <string name="TextView11">Check Apartment</string>
    <string name="Button">GRABAR</string>
    <string name="Button2">ENVIAR REPORTE</string>

</resources>